--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: wheat;
 }
+
+h1 {
+    color: cornflowerblue;
+    transition: color 1s ease-in-out;
+}
+
+.clicked {
+    color :tomato;
+}
+
